--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "amqplib": "^0.10.3",
     "aws-sdk": "^2.1499.0",
     "axios": "^1.6.5",
+    "bull": "^4.12.2",
     "class-validator": "^0.14.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
